# serforia

./: .dockerignore  .gitignore  Dockerfile  README-Docker.md  README-MICROSERVICES.md  README-streamlit.md  README.md  docker-compose.yml  main_agents.py  requirements.txt  setup_database.py  streamlit_app.py
agents/: base_agent.py  executor_agent.py  interpreter_agent.py  orchestrator.py  planner_agent.py  response_agent.py  schema_agent.py  visualization_agent.py
api/: .env.encrypted  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  setup_schema.py
api/agents/: base_agent.py  executor_agent.py  interpreter_agent.py  orchestrator.py  planner_agent.py  response_agent.py  utils.py  visualization_agent.py
api/agents/prompts/: __init__.py  domain_knowledge.py  executor_prompt.py  interpreter_prompt.py  planner_prompt.py  response_prompt.py  visualization_prompt.py
api/app/: __init__.py  main.py
api/app/core/: config.py
api/app/dependencies/: auth.py
api/app/models/: __init__.py  auth.py  query.py
api/app/routes/: __init__.py  auth.py  query.py
api/app/services/: __init__.py  auth_service.py  jwt_utils.py  orchestrator_service.py  session_store.py  wazuh_logger.py
api/database/: connection_manager.py  schema_cache.json  schema_mapper.py  skills.py
api/scripts/: env_encrypt.py
api/utils/: env_crypto.py  logger.py
client/: .env.example  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
database/: connection_manager.py  schema_cache.json  schema_mapper.py  skills.py
(+40 files in other folders)
